--- a/SLib.vcxproj.filters
+++ b/SLib.vcxproj.filters
@@ -117,12 +117,6 @@
     <ClInclude Include="sUi\SWindowActivityEvent.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="sGraphic\SGraphics.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="sGraphic\SGraphics2D.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="sGraphic\SFont.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -149,6 +143,9 @@
     </ClInclude>
     <ClInclude Include="sGraphic\SColor.hpp">
       <Filter>sLib\sCore\head</Filter>
+    </ClInclude>
+    <ClInclude Include="sGraphic\SRgn.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -215,12 +212,6 @@
     <ClCompile Include="sUi\SWindowInputEvent.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="sGraphic\SGraphics.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="sGraphic\SGraphics2D.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="sGraphic\SFont.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -231,6 +222,21 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="sGraphic\SGdiObject.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="sGraphic\SBitmap.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="sGraphic\SPen.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="sGraphic\SBrush.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="sGraphic\SPalette.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="sGraphic\SRgn.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
