--- a/SLib.vcxproj
+++ b/SLib.vcxproj
@@ -88,12 +88,15 @@
     <ClInclude Include="sCore\STimer.h" />
     <ClInclude Include="sGraphic\SBitmap.h" />
     <ClInclude Include="sGraphic\SBrush.h" />
+    <ClInclude Include="sGraphic\SCursor.h" />
     <ClInclude Include="sGraphic\SDc.h" />
     <ClInclude Include="sGraphic\SFont.h" />
     <ClInclude Include="sGraphic\SGdiObject.h" />
+    <ClInclude Include="sGraphic\SIcon.h" />
     <ClInclude Include="sGraphic\SPalette.h" />
     <ClInclude Include="sGraphic\SPen.h" />
     <ClInclude Include="sGraphic\SRgn.h" />
+    <ClInclude Include="sMedia\SMedia.h" />
     <ClInclude Include="sUi\SApplication.h" />
     <ClInclude Include="sUi\SLabel.h" />
     <ClInclude Include="sUi\SMessageHandler.h" />
@@ -120,12 +123,15 @@
     <ClCompile Include="sGraphic\SBitmap.cpp" />
     <ClCompile Include="sGraphic\SBrush.cpp" />
     <ClCompile Include="sGraphic\SBufferDC.cpp" />
+    <ClCompile Include="sGraphic\SCursor.cpp" />
     <ClCompile Include="sGraphic\SDc.cpp" />
     <ClCompile Include="sGraphic\SFont.cpp" />
     <ClCompile Include="sGraphic\SGdiObject.cpp" />
+    <ClCompile Include="sGraphic\SIcon.cpp" />
     <ClCompile Include="sGraphic\SPalette.cpp" />
     <ClCompile Include="sGraphic\SPen.cpp" />
     <ClCompile Include="sGraphic\SRgn.cpp" />
+    <ClCompile Include="sMedia\SMedia.cpp" />
     <ClCompile Include="sUi\SApplication.cpp" />
     <ClCompile Include="sUi\SLabel.cpp" />
     <ClCompile Include="sUi\SMessageHandler.cpp" />
