更新控件类及模态窗口 30/07/17

--- a/SLib.vcxproj
+++ b/SLib.vcxproj
@@ -97,8 +97,11 @@
     <ClInclude Include="sGraphic\SPen.h" />
     <ClInclude Include="sGraphic\SRgn.h" />
     <ClInclude Include="sMedia\SMedia.h" />
+    <ClInclude Include="sUi\SDialog.h" />
     <ClInclude Include="sUi\SApplication.h" />
+    <ClInclude Include="sUi\SButton.h" />
     <ClInclude Include="sUi\SLabel.h" />
+    <ClInclude Include="sUi\SMessageBox.h" />
     <ClInclude Include="sUi\SMessageHandler.h" />
     <ClInclude Include="sUi\SWidget.h" />
     <ClInclude Include="sUi\SWindow.h" />
@@ -132,8 +135,11 @@
     <ClCompile Include="sGraphic\SPen.cpp" />
     <ClCompile Include="sGraphic\SRgn.cpp" />
     <ClCompile Include="sMedia\SMedia.cpp" />
+    <ClCompile Include="sUi\SDialog.cpp" />
     <ClCompile Include="sUi\SApplication.cpp" />
+    <ClCompile Include="sUi\SButton.cpp" />
     <ClCompile Include="sUi\SLabel.cpp" />
+    <ClCompile Include="sUi\SMessageBox.cpp" />
     <ClCompile Include="sUi\SMessageHandler.cpp" />
     <ClCompile Include="sUi\SWidget.cpp" />
     <ClCompile Include="sUi\SWindow.cpp" />
