--- a/SLib.vcxproj
+++ b/SLib.vcxproj
@@ -96,7 +96,10 @@
     <ClInclude Include="sGraphic\SPalette.h" />
     <ClInclude Include="sGraphic\SPen.h" />
     <ClInclude Include="sGraphic\SRgn.h" />
+    <ClInclude Include="sHelper\SFileHelper.hpp" />
     <ClInclude Include="sMedia\SMedia.h" />
+    <ClInclude Include="sMisc\SFileInfo.hpp" />
+    <ClInclude Include="sParser\extern\inifile2\inifile.h" />
     <ClInclude Include="sParser\extern\jsoncpp\allocator.h" />
     <ClInclude Include="sParser\extern\jsoncpp\assertions.h" />
     <ClInclude Include="sParser\extern\jsoncpp\autolink.h" />
@@ -112,8 +115,9 @@
     <ClInclude Include="sParser\SInf.h" />
     <ClInclude Include="sParser\SIni.h" />
     <ClInclude Include="sParser\SJson.h" />
+    <ClInclude Include="sParser\SProfile.h" />
     <ClInclude Include="sParser\SRegistry.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="sParser\SText.h" />
     <ClInclude Include="sParser\SXml.h" />
@@ -158,7 +162,12 @@
     <ClCompile Include="sGraphic\SPen.cpp" />
     <ClCompile Include="sGraphic\SRgn.cpp" />
     <ClCompile Include="sMedia\SMedia.cpp" />
+    <ClCompile Include="sParser\extern\inifile2\inifile.cpp" />
     <ClCompile Include="sParser\extern\tinyxml2\tinyxml2.cpp" />
+    <ClCompile Include="sParser\SProfile.cpp" />
+    <ClCompile Include="sParser\SInf.cpp" />
+    <ClCompile Include="sParser\SRegistry.cpp" />
+    <ClCompile Include="sParser\SText.cpp" />
     <ClCompile Include="sPattern\SObserver.cpp" />
     <ClCompile Include="sPattern\SSingleton.cpp" />
     <ClCompile Include="sPattern\SSubject.cpp" />
